refactor: update all modules and cleanup
- Added BH1750 generator
- Updated DS3231 and BME280 scripts
- Removed generated KiCad artifacts from repo
- Updated .gitignore to avoid tracking auto-generated files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 **/*.FCBak
 **/*.stl
 
+# KiCad footprints generados
+gen/*_auto_label.kicad_mod
+gen/*_auto_num.kicad_mod
+gen/*_holes.json
+
 # Python
 **/__pycache__/
 *.o
